*Mon Dec 21 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- replace link to LinuxTerminal.pdf link from user-manual.html with a link to
http://www.ee.surrey.ac.uk/Teaching/Unix/unix1.html

*Wed Dec 16 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- Add a newline character "\n" to the beginning of warning and error messages  
- Small edits to user-manual.html
- Rename dist-zip.sh to zipdist.sh

*Tue Dec 15 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- Add doc/img/Sketchup-Frame1.jpg and doc/img/Sketchup-Trailer1.jpg
- Add doc/img/exp_ansys_gavin.png

*Tue Dec 8 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- Remove TextWrangler suggestion from user manual
- User Manual instructions on opening .profile using TextEdit
- add "-x" flag to suppress writing of 't' or 'c' characters in the Ouput Data
- Change line terminator to CR/LF 

* Sun Dec 6 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- add example/selfweight.3dd to validate gravity load analysis

* Fri Dec 4 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- increase allocated memory for file name strings 'modefl', 'meshfl', 'framefl'
from 64 to 128 ... Full path file names to local temp directories can be quite
long in Windows.  
- use sprintf to concatenate path name to file names
- my_itoa() is no longer used
- fix date-stamp bug in the ".plt" file

* Thu Dec 3 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- release version 20091203 
- add gravity loading to Frame3DD
new variables gX gY gZ for gravitational acceleration in the global X Y and Z
directions, add density data to frame element data section, remove density 
data from mass data, new variable nX for extra beam mass, simplified data
entry for extra beam mass.
- user manual updated
- template.3dd updated
- examples updated and checked

* Wed Dec 2 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- fix bug in creating mesh_file and mode_file the first char was being clipped